# zk-stats-lib

./: .gitignore  .gitmodules  README.md  bench.py  core.py  playground.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
benchmark/: readme.md
benchmark/for_testing_only/: bench_geomean.ipynb  bench_mean.ipynb  bench_median.ipynb  bench_mode.ipynb  bench_stdev.ipynb  data_100.json  data_1000.json  data_300.json  data_50.json  data_600.json
benchmark/one_column/: bench_geomean.ipynb  bench_mean.ipynb  bench_median.ipynb  bench_mode.ipynb  bench_stdev.ipynb  data00.json  data12.json  data22.json  data_lar_100.json  data_lar_50.json  data_lar_600.json  data_med_1000.json  data_med_600.json  data_sm_100.json  data_sm_1000.json  data_sm_300.json  data_sm_50.json  data_sm_600.json  data_std_lar_100.json  data_std_lar_1000.json  data_std_lar_300.json  data_std_lar_50.json  data_std_lar_600.json
benchmark/result/: bench_geomean.ipynb  bench_mean.ipynb  bench_median.ipynb  bench_mode.ipynb  bench_stdev.ipynb  data_100.json  data_1000.json  data_300.json  data_50.json  data_600.json
benchmark/two_column/: x_data01.json  x_data10.json  x_data20.json
examples/1.only_torch/: data.json  only_torch.ipynb
examples/2.torch+state/: torch+state.ipynb
examples/3.state/: state.ipynb
playground/: README.md  example.onnx  playground.py
tests/: conftest.py  helpers.py  test_computation.py  test_core.py  test_ops.py
zkstats/: arithc_to_bristol.py  cli.py  computation.py  core.py  models.py  ops.py
zkstats_onefile/: core_onefile.py
(+110 files in other folders)
