[tool.poetry]
name = "zkstats"
version = "0.1.5"
description = ""
authors = ["Jern Kunpittaya", "Kevin Chia"]

[tool.poetry.dependencies]
python = "^3.9"
ezkl = "9.1.0"
torch = "^2.1.1"
scipy = "^1.11.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
statistics = "^1.0.3"
onnx = "^1.15.0"
click = "^8.1.7"
tensorflow = ">=2.16.1"
# onnx2keras only
onnxruntime = "^1.17.3"
onnx-simplifier = "^0.4.36"
opencv-python = "^4.9.0.80"
# keras2circom only
keras = "^3.2.1"
docopt = ">=0.6.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.4"

[tool.poetry.scripts]
zkstats-cli = "zkstats.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
