[tool.poetry]
name = "zkstats"
version = "0.1.7"
description = ""
authors = ["Jern Kunpittaya", "Kevin Chia"]

[tool.poetry.dependencies]
python = "^3.9"
ezkl = "9.1.0"
torch = "^2.1.1"
requests = "^2.31.0"
scipy = "^1.11.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
statistics = "^1.0.3"
onnx = "^1.15.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.4"

[tool.poetry.scripts]
zkstats-cli = "zkstats.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
